--- a/CrudTest2/CrudTest2.csproj
+++ b/CrudTest2/CrudTest2.csproj
@@ -13,7 +13,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CrudTest</RootNamespace>
-    <AssemblyName>CrudTest</AssemblyName>
+    <AssemblyName>CrudTest2</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
