--- a/CrudTest/bin/CrudTest.dll.config
+++ b/CrudTest/bin/CrudTest.dll.config
@@ -38,9 +38,10 @@
     <modules runAllManagedModulesForAllRequests="true"/>-->
     <httpProtocol>
       <customHeaders>
-        <add name="Access-Control-Allow-Origin" value="*" />
+        <add name="Access-Control-Allow-Origin" value="https://mywebsite2:44394" />
         <add name="Access-Control-Allow-Methods" value="GET, POST, OPTIONS" />
         <add name="Access-Control-Allow-Headers" value="Content-Type, Authorization" />
+        <add name="Access-Control-Allow-Credentials" value="true" />
       </customHeaders>
     </httpProtocol>
   </system.webServer>
